_sass/page.scss
@import "jekyll-theme-cs50";

// Root em
html {
    font-size: 16px;
}

// So that main's height doesn't grow to fill viewport, which breaks addition of margin-bottom for last headings
body > div.container-fluid > div.row {
    align-items: flex-start;
}

// Defaults for iframes
iframe {
    border: 0;
    display: block; // Else defaults to inline, which adds whitespace below margin-bottom
    height: 480px;
    margin-bottom: 16px;
}

// Ensure responsive in Safari on iOS (for, e.g., Google Calendars), per 
// https://stackoverflow.com/a/23083463/5156190
iframe {
    min-width: 100%;
    width: 1px;
}

// Confine images to parent
img {
    max-width: 100%;
}

// Confine borders to images
.img-thumbnail {
    width: fit-content;
}

// Box shadows
#alert, aside {
    box-shadow: .5rem .5rem 1rem rgba($black, .20); // https://github.com/twbs/bootstrap/blob/master/scss/_variables.scss
}

// Crimson background, transparent text
aside {
    background-color: $link-color;
    color: rgba(255, 255, 255, 0.5);
    font-size: 1.125rem;
}

// Override column's padding
aside.col-md {
    padding: 2rem 2rem;
}

// Fixed width, scroll on larger devices
@include media-breakpoint-up(md) {
    @media screen {
        aside.col-md {
            flex: 0 1 20rem;
            @supports (position: sticky) or (position: -webkit-sticky) {
                height: 100vh;
                overflow-y: auto;
                top: 0;
                z-index: $zindex-sticky - 1;
            }
            @supports (position: sticky) {
                position: sticky;
            }
            @supports (position: -webkit-sticky) {
                position: -webkit-sticky;
            }
        }
    }
}

// Align badges
aside .badge {
    vertical-align: middle;
}

// Bold headings
aside h1, 
aside h2, 
aside h3, 
aside h4, 
aside h5, 
aside h6 {
    font-weight: bold;
}

// Opaque text
aside a,
aside a:hover,
aside button[data-toggle=collapse],
aside button[data-toggle=collapse]:hover {
    background-color: inherit;
    border-color: rgba(255, 255, 255, .5);
    color: rgba(255, 255, 255, 1);
}
aside button[data-toggle=modal],
aside button[data-toggle=modal]:hover {
    color: rgba(255, 255, 255, 1);
}

// Opaque border
aside button[data-toggle=collapse]:hover {
    border-color: rgba(255, 255, 255, 1);
}

// Invert colors when not collapsed
aside button[data-toggle=collapse]:not(.collapsed) {
    background-color: rgba(255, 255, 255, 1);
    color: $link-color;
}

// Compact small paragraphs
aside p.small {
    line-height: 1.25;
}

// Separate nav button (or header) and footer, applying margins to children to avoid flicker when uncollapsing
nav > *:first-child {
    margin-top: 1rem;
}

// Mimic Primer
#alert *:last-child,
header *:last-child,
nav *:last-child,
footer *:last-child {
    margin-bottom: 0;
}

// Separate buttons from header and nav
aside button[data-toggle=collapse],
aside button[data-toggle=modal] {
    margin-top: 1rem;
}

// Truncate list items
nav ol li, nav ul li {
    @include text-truncate;
}

// Left-align unordered lists, without bullets
nav ul {
    list-style: none;
    padding-left: 0;
}

// Preserve bullets for nested unordered lists
nav ul ul {
    list-style: inside;
}

// Left-align ordered lists
nav ol {
    list-style-position: inside;
    padding-left: 0;
}

// Separate footer from nav unless empty
footer {
    margin-top: 1rem;
}
footer:empty {
    margin-top: 0;
}

// Override column's padding, width
main.col-md {
    max-width: 80rem;
    overflow: auto; /* https://stackoverflow.com/a/26523355 */
    padding: 4rem 2rem;
}

// Mimic Google's highlighting
mark, .mark {
    background-color: inherit;
    color: inherit;
    font-weight: bold;
    padding: 0
}

// Wrap long words (and URLs, whether linked or not), especially on mobile
.markdown-body {
    word-break: break-word;
}

// But not in tables, which should instead scroll horizontally
.markdown-body table {
    word-break: normal;
}

// Override Primer's family and size for fonts
.markdown-body {
    font-family: inherit; /* Use our family */
    font-size: inherit; /* Use our size */
}

// Preserve spaces between backticks
.markdown-body code {
    white-space: pre-wrap;
}

// Add padding above headings to match Primer's padding below headings,
// to ensure anchors aren't too close to top of viewport
.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
    margin-top: 0;
    padding-top: 16px;
}

// Mute emphasized text in headings
.markdown-body h1 > em,
.markdown-body h2 > em,
.markdown-body h3 > em,
.markdown-body h4 > em,
.markdown-body h5 > em,
.markdown-body h6 > em {
    @extend .font-weight-normal;
    @extend .text-muted;
    font-style: normal;
}

// Subtle anchors in headings 
.markdown-body h1 a[data-id],
.markdown-body h2 a[data-id],
.markdown-body h3 a[data-id],
.markdown-body h4 a[data-id],
.markdown-body h5 a[data-id],
.markdown-body h6 a[data-id] {
    color: inherit;
    text-decoration: none;
}

// Fix inconsistency in Primer
// https://github.com/primer/primer/pull/563
.markdown-body ol > li:first-child,
.markdown-body ul > li:first-child {
    margin-top: .25em;   
}

// Mimic li's margin-top
.markdown-body li > blockquote,
.markdown-body li > div > div.highlight,
.markdown-body li > img,
.markdown-body li > pre {
    margin-top: .25em;
}

// Mimic li's margin-bottom, not p's margin-bottom
.markdown-body li > div > div.highlight {
    margin-bottom: 0;
}

// Mimic h1's bottom border
.markdown-body hr {
    background-color: #eaecef;
    height: 1px;
    margin: 16px 0;
}

// Mimic p
.markdown-body .embed-responsive {
    margin-bottom: 16px;
}
.markdown-body summary {
    margin-bottom: 16px;
}
.markdown-body details {
    margin-bottom: 16px;
}

// Fill 80% of viewport
.modal-dialog {
    max-height: inherit;
    max-width: inherit;
    margin: 0 auto;
    width: 80vw;
}
.modal-content {
    height: 80vh;
}

// Condense TOC
#markdown-toc li + li,
#markdown-toc ol > li:first-child,
#markdown-toc ul > li:first-child {
    margin-top: 0;
}

// Don't number search results
#search ol {
    list-style-type: none;
    padding-left: 1rem;
    padding-right: 1rem;
}

// On small devices and printers
// https://getbootstrap.com/docs/4.2/layout/overview/#responsive-breakpoints
@media (max-width: 767.98px), print {

    // Don't shrink fonts as much
    small, .small {
        font-size: 90%;
    }
}

// Also on printers
@media print {

    // Move aside above main
    aside.col-md {
        flex: unset;
    }

    // Hide button above nav
    aside button[data-toggle=collapse] {
        display: none;
    }

    // Only show header
    nav.collapse:not(.show), footer {
        display: none !important;
    }

    // Hide search
    #search {
        display: none !important;
    }

    // Display links' URLs
    a[href^='http']:after {
        content: ' (' attr(href) ')';
        word-break: break-word;
    }
}

